--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,45 +6,66 @@
     font-optical-sizing: auto;
 }
 
+body {
+    background-color: #000000;
+}
+
 .header {
+    top: 1rem;
+    position: absolute;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
-    background-color: #749bc2;
-    opacity: 0.80;
+}
 
-    .middle {
-        font-size: .9rem;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        gap: 1.5rem;
-        flex-wrap: wrap;
-    }
+.header .middle {
+    font-size: 0.9rem;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.header .company_logo {
+    max-width: 2.8rem;
 }
 
 .btn {
-    font-weight: 100;
-    font-size: 1rem;
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 300;
+    font-size: .6rem;
+    color: rgb(255, 255, 255);
+    font-family: "Roboto", sans-serif;
+
+    border: 1px rgb(255, 255, 255) solid;
+    background-color: #ffffff45;
 }
 
-.left_header {
-    position: absolute;
-    left: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 0.3rem;
-
-    .company_logo {
-        max-width: 2rem;
-    }
-    .company_name {
-        font-family: "Akaya Kanadaka", system-ui;
-        font-size: 1.5rem;
-        color: rgb(255, 255, 255);
-    }
+.middle>* {
+    padding: .4rem;
+    border-radius: 15px;
 }
+
+.section {
+    height: 100dvh;
+}
+
+.section .background {
+    width: 100%;
+    height: 100%;
+    background-image: url('/assets/img/background.gif');
+    background-size: 85%;
+    background-position: center;
+    z-index: -1;
+    background-repeat: no-repeat;
+}
+
+.section .content {
+    background-color: rgba(129, 129, 129, 0.532);
+}
+
+
