--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,12 +11,12 @@ body {
 }
 
 .header {
-    top: 1rem;
     position: absolute;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.500);
 }
 
 .header .middle {
@@ -58,10 +58,8 @@ body {
     width: 100%;
     height: 100%;
     background-image: url('/assets/img/background.gif');
-    background-size: 85%;
-    background-position: center;
+    background-size: 100%;
     z-index: -1;
-    background-repeat: no-repeat;
 }
 
 .section .content {
