--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,18 +52,37 @@ body {
 
 .section {
     height: 100dvh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .section .background {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/assets/img/background.gif');
     background-size: 100%;
     z-index: -1;
+    object-fit: cover;
 }
 
-.section .content {
-    background-color: rgba(129, 129, 129, 0.532);
+.content {
+    position: relative;
+    z-index: 1;
+    padding: 3rem;
+    color: white;
+    text-align: center;
+    max-width: 50%;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    text-align: center;
+    z-index: 1;
+    position: relative;
 }
 
 
