--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -52,16 +52,23 @@ body {
 
 .section {
     height: 100dvh;
+    overflow: hidden;
 }
 
 .section .background {
     width: 100%;
+    height: 100%;
     background-size: 100%;
     z-index: -1;
 }
 
-.section .content {
-    background-color: rgba(129, 129, 129, 0.532);
+.content {
+    position: relative;
+    z-index: 1;
+    padding: 3rem;
+    color: white;
+    top: 0;
+    left: 0;
 }
 
 
