--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     align-items: center;
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.500);
+    z-index: 2;
 }
 
 .header .middle {
@@ -51,11 +52,13 @@ body {
 }
 
 .section {
+    position: relative;
     height: 100dvh;
     overflow: hidden;
 }
 
 .section .background {
+    position: absolute;
     width: 100%;
     height: 100%;
     background-size: 100%;
@@ -64,7 +67,6 @@ body {
 
 .content {
     position: relative;
-    z-index: 1;
     padding: 3rem;
     color: white;
     top: 0;
