--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -17,7 +17,8 @@ body {
     align-items: center;
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.500);
-    z-index: 2;
+    z-index: 1000;
+    position: fixed;
 }
 
 .header .middle {
@@ -52,25 +53,38 @@ body {
 }
 
 .section {
-    position: relative;
     height: 100dvh;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding-top: 4rem;
 }
 
-.section .background {
+.section .background img{
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-size: 100%;
     z-index: -1;
+    object-fit: cover;
+    pointer-events: none;
 }
 
 .content {
     position: relative;
+    z-index: 1;
     padding: 3rem;
     color: white;
-    top: 0;
-    left: 0;
+    text-align: center;
+    max-width: 50%;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    text-align: center;
+    z-index: 1;
+    position: relative;
 }
-
-
