--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -75,16 +75,14 @@ body {
 }
 
 .content {
-    position: relative;
-    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 3rem;
-    color: white;
-    text-align: center;
-    max-width: 50%;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    text-align: center;
-    z-index: 1;
-    position: relative;
+    gap: 2rem;
+    max-width: 70rem;
+}
+
+.content .image {
+    max-height: 70dvh;
 }
