--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     text-decoration: none;
     font-optical-sizing: auto;
+    font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -75,14 +76,88 @@ body {
 }
 
 .content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    max-width: 70rem;
+    padding: 2rem;
+    max-width: 90%;
+    align-items: center;
 }
 
 .content .image {
-    max-height: 70dvh;
+    max-height: 50dvh;
+}
+
+.left, .right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.upper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text {
+    align-content: center;
+    color: white;
+}
+
+.right .upper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 0.5rem;
+}
+
+.right .lower {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    padding: .5rem;
+    width: 100%;
+}
+
+.content_btn {
+    color: white;
+    border: white 1px solid;
+    padding: 0.5rem 2rem;
+    width: 200px;
+    text-align: center;
+}
+
+.content_btn:hover {
+    background-color: white;
+    color: black;
+    transition: 0.3s ease;
+}
+
+.left .lower {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.content_icon {
+    color: white;
+    border: white 1px solid;
+    border-radius: 50px;
+    padding: .4rem;
+}
+
+.content_icon:hover {
+    transform: scale(1.2);
+    transition: transform 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.italic {
+    font-style: italic;
+    font-weight: 100;
 }
