--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -127,7 +127,7 @@ body {
     color: white;
     border: white 1px solid;
     padding: 0.5rem 2rem;
-    width: 200px;
+    width: 15rem;
     text-align: center;
 }
 
@@ -155,6 +155,10 @@ body {
     transform: scale(1.2);
     transition: transform 0.2s ease-in-out;
     cursor: pointer;
+}
+
+h1 {
+    font-size: 2.5rem;
 }
 
 .italic {
