reformat: modified css of all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,13 @@ body {
     background-color: #ffffff45;
 }
 
+.btn:hover {
+    transform:scale(0.95);
+    transition: transform 0.2s ease-in-out;
+    cursor: pointer;
+    background-color: #93939369;
+}
+
 .middle>* {
     padding: .4rem;
     border-radius: 15px;
