--- a/pages/page2/assets/css/style.css
+++ b/pages/page2/assets/css/style.css
@@ -81,7 +81,6 @@ body {
     justify-content: center;
     align-items: flex-start;
     text-align: left;
-    gap: 1rem;
 }
 
 .title {
@@ -106,13 +105,15 @@ body {
 .content_btn {
     font-size: .9rem;
     background-color: #3674B5;
-    padding: .7rem;
+    padding: .6rem 1rem;
     border-radius: 50px;
     color: #FFFBDE;
     align-items: center;
     cursor: pointer;
     display: inline-flex;
     gap: .5rem;
+    white-space: nowrap;
+    width: fit-content;
 }
 
 .content_btn:hover {
@@ -120,6 +121,13 @@ body {
     transition: transform 0.2s ease-in-out;
     cursor: pointer;
     background-color: #29609c;
+}
+
+.contents {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    animation: slideRight 1s ease-out forwards;
 }
 
 .right {
@@ -137,6 +145,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .image img {
@@ -145,4 +154,28 @@ body {
     height: 100%;
     object-fit: contain;
     display: block;
+
+    animation: slideLeft 1s ease-out forwards;
+}
+
+@keyframes slideLeft {
+    0% {
+        transform: translateX(10%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideRight {
+    0% {
+        transform: translateX(-10%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
