reformat: added colors when button is active

--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -45,7 +45,6 @@ body {
     font-family: "Roboto", sans-serif;
 
     border: 1px rgb(255, 255, 255) solid;
-    background-color: #ffffff45;
 }
 
 .btn:hover {
@@ -53,6 +52,10 @@ body {
     transition: transform 0.2s ease-in-out;
     cursor: pointer;
     background-color: #93939369;
+}
+
+.btn.active {
+    background-color: #ffffff45;
 }
 
 .middle>* {
