--- a/pages/page2/assets/css/style.css
+++ b/pages/page2/assets/css/style.css
@@ -47,7 +47,6 @@ body {
     font-family: "Roboto", sans-serif;
 
     border: 1px rgb(255, 255, 255) solid;
-    background-color: #ffffff45;
 }
 
 .btn:hover {
@@ -55,6 +54,10 @@ body {
     transition: transform 0.2s ease-in-out;
     cursor: pointer;
     background-color: #93939369;
+}
+
+.btn.active {
+    background-color: #ffffff45;
 }
 
 .middle>* {
