feat: added page 3

--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -73,7 +73,7 @@ body {
     padding-top: 4rem;
 }
 
-.section .background img{
+.background img{
     position: absolute;
     top: 0;
     left: 0;
