--- a/pages/page3/assets/css/style.css
+++ b/pages/page3/assets/css/style.css
@@ -88,10 +88,6 @@ body {
     text-align: left;
 }
 
-.right {
-    overflow: hidden;
-}
-
 .left {
     flex: 1;
     display: flex;
@@ -100,13 +96,20 @@ body {
     position: relative;
 }
 
+.right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .image {
     position: absolute;
-    top: 20%;
-    right: 10%;
-    width: 33%;
-    transform: rotate(10deg);
+    top: 17%;
+    right: 20%;
+    width: 70%;
     z-index: 1;
+
+    animation: slideUp 1s ease-out forwards;
 }
 
 .contents {
@@ -115,13 +118,15 @@ body {
     align-items: flex-start;
     max-width: 70%;
     text-align: left;
+    animation: slideDown 1s ease-out forwards;
+    padding-left: 20%;
 }
 
 .content_btn {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 0.9rem;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #f3dbaa;
     padding: 0.4rem 1rem;
     border-radius: 15px;
     transition: background-color 0.2s ease;
@@ -140,8 +145,29 @@ body {
 
 
 .description {
-    max-width: 40%;
+    max-width: 90%;
     color: #ffffff;
 }
 
+@keyframes slideUp {
+    0% {
+        transform: translateY(10%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideDown {
+    0% {
+        transform: translateY(-10%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
 
