--- a/pages/page3/assets/css/style.css
+++ b/pages/page3/assets/css/style.css
@@ -68,7 +68,7 @@ body {
 .section {
     height: 100dvh;
     width: 100%;
-    background-image: linear-gradient(to bottom right, #4682A9, #91C8E4);
+    background-image: linear-gradient(to bottom right, #4682A9, #FFFBDE);
     display: flex;
 }
 
