--- a/pages/page5/assets/css/style.css
+++ b/pages/page5/assets/css/style.css
@@ -74,43 +74,54 @@ body {
 }
 
 .left {
-    background-color: #FFFBDE;
     height: 100%;
     width: 35%;
-    padding: 5rem;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: space-between;
     text-align: left;
 }
 
+.top, .bottom {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.top {
+    background-color: #3ec6e8;
+    height: 100%;
+}
+
+.bottom {
+    background-color: #B6EADA;
+    height: 100%;
+}
+
+
 .title {
-    font-size: 3.5rem;
+    font-size: 6rem;
+    color: white;
 }
 
 .subtitle {
     font-size: 2rem;
-    color: #578FCA;
+    color: #3ec6e8;
     font-style: italic;
 }
 
-.highlight {
-    color: #578FCA;
-    font-weight: 600;
-}
-
 .description {
-    max-width: 80%;
+    max-width: 60%;
+    color: white;
 }
 
 .content_btn {
     font-size: .9rem;
-    background-color: #3674B5;
+    background-color: #b6eada;
     padding: .6rem 1rem;
     border-radius: 50px;
-    color: #FFFBDE;
+    color: #222222;
     align-items: center;
     cursor: pointer;
     display: inline-flex;
@@ -123,26 +134,32 @@ body {
     transform:scale(0.95);
     transition: transform 0.2s ease-in-out;
     cursor: pointer;
-    background-color: #29609c;
+    background-color: #7fb8a6;
 }
 
 .contents {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     animation: slideRight 1s ease-out forwards;
+    align-items: center;
 }
 
 .right {
-    background-image: linear-gradient(to bottom right, #3674B5, #91C8E4);
+    background-color: #222222;
     height: 100%;
     width: 65%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .image {
-    height: 50dvh;
-    left: 55dvh;
-    top: 25dvh;
+    height: 80%;
+    left: 17%;
+    top: 10%;
     position: absolute;
     z-index: 10;
     pointer-events: none;
