--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     text-decoration: none;
     font-optical-sizing: auto;
+    font-family: "Jersey 20", sans-serif;
 }
 
 body {
@@ -87,8 +88,8 @@ body {
 .content {
     position: relative;
     z-index: 1;
-    padding: 3rem;
-    color: white;
+    padding: 2rem;
+    color: #e6eef1;
     text-align: center;
     max-width: 50%;
     width: 100%;
@@ -97,6 +98,34 @@ body {
     text-align: center;
     z-index: 1;
     position: relative;
+    background-color: #00000067;
+    border-radius: 5px;
+    letter-spacing: 2.5px;
+    animation: slideUp 1s ease-out forwards;
+}
+
+.title {
+    font-size: 8rem;
+}
+
+.subtitle {
+    font-size: 3rem;
+    font-style: italic;
+}
+
+.name {
+    font-size: 2rem;
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(10%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 
