--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -1,206 +1,206 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-optical-sizing: auto;
-    font-family: "Roboto", sans-serif;
-}
-
-body {
-    background-color: #000000;
-}
-
-.header {
-    position: absolute;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.500);
-    z-index: 1000;
-    position: fixed;
-}
-
-.header .middle {
-    font-size: 0.9rem;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 1.5rem;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.header .company_logo {
-    max-width: 2.8rem;
-}
-
-.btn {
-    font-weight: 300;
-    font-size: .6rem;
-    color: rgb(255, 255, 255);
-    font-family: "Roboto", sans-serif;
-
-    border: 1px rgb(255, 255, 255) solid;
-}
-
-.btn:hover {
-    transform:scale(0.95);
-    transition: transform 0.2s ease-in-out;
-    cursor: pointer;
-    background-color: #93939369;
-}
-
-.btn.active {
-    background-color: #ffffff45;
-}
-
-.middle>* {
-    padding: .4rem;
-    border-radius: 15px;
-}
-
-.section {
-    height: 100dvh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding-top: 4rem;
-}
-
-.background img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: 100%;
-    z-index: -1;
-    object-fit: cover;
-    pointer-events: none;
-}
-
-.content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-    padding: 2rem;
-    max-width: 90%;
-    align-items: center;
-}
-
-.content .image {
-    max-height: 50dvh;
-}
-
-.left, .right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: .5rem;
-}
-
-.left {
-    animation: slideDown 1s ease-out forwards;
-}
-
-.right {
-    animation: slideUp 1s ease-out forwards;
-}
-
-.upper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.text {
-    align-content: center;
-    color: white;
-}
-
-.right .upper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 0.5rem;
-}
-
-.right .lower {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-    padding: .5rem;
-    width: 100%;
-}
-
-.content_btn {
-    color: white;
-    border: white 1px solid;
-    padding: 0.5rem 2rem;
-    width: 15rem;
-    text-align: center;
-}
-
-.content_btn:hover {
-    background-color: white;
-    color: black;
-    transition: 0.3s ease;
-}
-
-.left .lower {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-
-.content_icon {
-    color: white;
-    border-radius: 50px;
-    padding: .4rem;
-}
-
-.content_icon:hover {
-    transform: scale(1.2);
-    transition: transform 0.2s ease-in-out;
-    cursor: pointer;
-}
-
-h1 {
-    font-size: 2.5rem;
-}
-
-.italic {
-    font-style: italic;
-    font-weight: 100;
-}
-
-@keyframes slideUp {
-    0% {
-        transform: translateY(10%);
-        opacity: 0;
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        text-decoration: none;
+        font-optical-sizing: auto;
+        font-family: "Roboto", sans-serif;
     }
-    100% {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
 
-@keyframes slideDown {
-    0% {
-        transform: translateY(-10%);
-        opacity: 0;
+    body {
+        background-color: #000000;
     }
-    100% {
-        transform: translateX(0);
-        opacity: 1;
+
+    .header {
+        position: absolute;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgba(0, 0, 0, 0.500);
+        z-index: 1000;
+        position: fixed;
     }
-}
+
+    .header .middle {
+        font-size: 0.9rem;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 1.5rem;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header .company_logo {
+        max-width: 2.8rem;
+    }
+
+    .btn {
+        font-weight: 300;
+        font-size: .6rem;
+        color: rgb(255, 255, 255);
+        font-family: "Roboto", sans-serif;
+
+        border: 1px rgb(255, 255, 255) solid;
+    }
+
+    .btn:hover {
+        transform:scale(0.95);
+        transition: transform 0.2s ease-in-out;
+        cursor: pointer;
+        background-color: #93939369;
+    }
+
+    .btn.active {
+        background-color: #ffffff45;
+    }
+
+    .middle>* {
+        padding: .4rem;
+        border-radius: 15px;
+    }
+
+    .section {
+        height: 100dvh;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        padding-top: 4rem;
+    }
+
+    .background img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: 100%;
+        z-index: -1;
+        object-fit: cover;
+        pointer-events: none;
+    }
+
+    .content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        padding: 2rem;
+        max-width: 90%;
+        align-items: center;
+    }
+
+    .content .image {
+        max-height: 50dvh;
+    }
+
+    .left, .right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: .5rem;
+    }
+
+    .left {
+        animation: slideDown 1s ease-out forwards;
+    }
+
+    .right {
+        animation: slideUp 1s ease-out forwards;
+    }
+
+    .upper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .text {
+        align-content: center;
+        color: white;
+    }
+
+    .right .upper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 0.5rem;
+    }
+
+    .right .lower {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+        padding: .5rem;
+        width: 100%;
+    }
+
+    .content_btn {
+        color: white;
+        border: white 1px solid;
+        padding: 0.5rem 2rem;
+        width: 15rem;
+        text-align: center;
+    }
+
+    .content_btn:hover {
+        background-color: white;
+        color: black;
+        transition: 0.3s ease;
+    }
+
+    .left .lower {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .content_icon {
+        color: white;
+        border-radius: 50px;
+        padding: .4rem;
+    }
+
+    .content_icon:hover {
+        transform: scale(1.2);
+        transition: transform 0.2s ease-in-out;
+        cursor: pointer;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    .italic {
+        font-style: italic;
+        font-weight: 100;
+    }
+
+    @keyframes slideUp {
+        0% {
+            transform: translateY(10%);
+            opacity: 0;
+        }
+        100% {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    @keyframes slideDown {
+        0% {
+            transform: translateY(-10%);
+            opacity: 0;
+        }
+        100% {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
