--- a/pages/page3/assets/css/style.css
+++ b/pages/page3/assets/css/style.css
@@ -155,7 +155,7 @@ body {
         opacity: 0;
     }
     100% {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
@@ -166,7 +166,7 @@ body {
         opacity: 0;
     }
     100% {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
