--- a/pages/page4/assets/css/style.css
+++ b/pages/page4/assets/css/style.css
@@ -128,7 +128,7 @@ body {
         opacity: 0;
     }
     100% {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
@@ -139,7 +139,7 @@ body {
         opacity: 0;
     }
     100% {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
